# rankingenem

./: .claudeignore  .gitignore  AGENTS.md  Dockerfile.frontend  PREPARACAO_ENEM_2025.md  analysis_and_improvements.md  enem_comparador_anual.py  enem_ingestor_2025.py  enem_migration_2025.sql  enem_schema_analysis.py  migrate_to_supabase.py  pyproject.toml
.claude/: settings.local.json.tmp.86213.1766792173461
.claude/agents/: supabase-specialist.md
.claude/skills/hostinger/: SKILL.md  supabase-migrations.sql
.claude/skills/microdados/: SKILL.md
claude/: CLAUDE-verbose.md  CLAUDE.md  guia.md  guide.md  settings.json
claude/commands/: create-feature.md  investigate-batch.md  open-pr.md  review-staged.md  trim.md
claude/skills/react/: SKILL.md
claude/skills/reviewing-code/: SKILL.md
claude/skills/software-engineering/: SKILL.md
claude/skills/typescript/: SKILL.md
claude/skills/writing/: SKILL.md
enem-analytics/: .gitignore  README.md
enem-analytics/backend/: .dockerignore  .env.example  Dockerfile  fly.toml  reextract_gliner.py  requirements-prod.txt  requirements.txt
enem-analytics/backend/api/: main.py
enem-analytics/backend/api/admin/: router.py
enem-analytics/backend/data/: conteudos_tri_gliner.csv  duckdb_store.py  gliner_cache_local.json  gliner_cache_v2.json  supabase_loader.py  supabase_store.py  year_resolver.py
enem-analytics/backend/ml/: clustering_model.py  diagnosis_engine.py  gliner_processor.py  prediction_model.py  prediction_quality.py  preprocessor.py  recommendation_engine.py
enem-analytics/backend/models/: prediction_ch.joblib  prediction_cn.joblib  prediction_lc.joblib  prediction_media.joblib  prediction_mt.joblib  prediction_redacao.joblib
enem-analytics/backend/scripts/: create_admin.py  export_users.py  extract_all_school_skills.py  import_enem_year.py  import_school_skills_csv.py  import_users_supabase.py  migrate_users_to_supabase.py  retrain_prediction_models.py  supabase_setup.sql  update_enem_year.py  upload_skills_to_supabase.py
enem-analytics/backend/tests/: test_gliner_insights.py  test_prediction_quality.py  test_update_enem_year.py  test_year_resolver.py
enem-analytics/frontend/: .env.example  Dockerfile  README.md  package.json  pnpm-lock.yaml  vercel.json
microdados-2025/: .gitignore  README.md
tests/: conftest.py  test_classification.py  test_edge_cases.py  test_per_field_thresholds.py  test_portuguese_extraction.py
tests/unit/: test_api_client.py  test_engine_critical.py  test_layers.py  test_model.py  test_processor.py  test_schema_builder.py  test_trainer_critical.py  test_training_data.py
xtri-claude-agents/: README.md
xtri-claude-agents/agents/: data-auditor.md  enem-validator.md  orchestrator.md  tri-analyst.md
(+65 files in other folders)
